@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="utf-8"?>
+<project name="symlink-test"
+    default="antunit" xmlns:au="antlib:org.apache.ant.antunit">
+  <import file="../../../antunit-base.xml"/>
+
+  <property name="build.dir" location="build" />
+
+  <target name="setUp">
+    <condition property="isUnix">
+      <os family="unix" />
+    </condition>
+  </target>
+
+  <target name="os">
+
+    <mkdir dir="${build.dir}" />
+    <condition property="unix">
+      <os family="unix" />
+    </condition>
+    <property name="file_ref"
+      location="${build.dir}/file"/>
+    <property name="hanging_ref"
+        location="${build.dir}/hanging_ref"/>
+  </target>
+
+  <target name="init" depends="os" if="unix">
+    <touch file="${file_ref}" />
+  </target>
+
+  <target name="tearDown">
+    <delete dir="${build.dir}" />
+  </target>
+
+  <target name="testCreateDouble" depends="init" if="unix">
+    <symlink overwrite="true" link="${build.dir}/link"
+        resource="${file_ref}"/>
+    <symlink overwrite="true" link="${build.dir}/link"
+        resource="${file_ref}"/>
+  </target>
+
+
+  <target name="testCreateDoubleHanging" depends="init" if="unix">
+    <symlink overwrite="true" link="${build.dir}/link2"
+        resource="${hanging_ref}"/>
+    <symlink overwrite="true" link="${build.dir}/link2"
+        resource="${hanging_ref}"/>
+  </target>
+
+  <target name="testCreateOverFile" depends="init" if="unix">
+    <touch file="${build.dir}/link3" />
+    <symlink overwrite="true" link="${build.dir}/link3"
+        resource="${file_ref}"/>
+  </target>
+
+</project>
