@@ -41,6 +41,13 @@ Changes that could break older environments:
 Fixed bugs:
 -----------
 
+ * <symlink> task couldn't overwrite existing symlinks that pointed to nonexistent files
+   Bugzilla report 38199
+
+ * <symlink> task couldn't overwrite files that were in the way of the symlink.
+   Bugzilla report 43426
+
+
 Other changes:
 --------------
 
